--- a/src/components/menu.less
+++ b/src/components/menu.less
@@ -9,6 +9,7 @@
   }
 
   @media @smart-phone {
+    height: 0;
 
     .pure-menu-heading {
       display: none;
@@ -17,6 +18,9 @@
   }
 
   @media @medium-device {
+    top: 0;
+    bottom: 0;
+    height: 100%;
 
     .menu-link {
       display: none;
